# ROS2_Intro

install/: local_setup.sh  setup.sh
install/bumperbot_controller/share/bumperbot_controller/: package.sh  package.xml
install/bumperbot_controller/share/bumperbot_controller/launch/: controller.launch.py
install/bumperbot_cpp_examples/lib/bumperbot_cpp_examples/: simple_parameter  simple_publisher
install/bumperbot_cpp_examples/share/ament_index/resource_index/package_run_dependencies/: bumperbot_cpp_examples
install/bumperbot_cpp_examples/share/bumperbot_cpp_examples/: local_setup.sh  package.sh  package.xml
install/bumperbot_cpp_examples/share/bumperbot_cpp_examples/cmake/: bumperbot_cpp_examplesConfig.cmake
install/bumperbot_description/share/bumperbot_description/: package.sh  package.xml
install/bumperbot_description/share/bumperbot_description/launch/: display.launch.py
install/bumperbot_description/share/bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_gazebo.xacro  bumperbot_ros2_control.xacro
install/bumperbot_py_examples/share/bumperbot_py_examples/: package.sh  package.xml
log/: latest_build  latest_list
src/bumperbot_controller/: CMakeLists.txt
src/bumperbot_controller/config/: bumperbot_controllers.yaml
src/bumperbot_controller/launch/: controller.launch.py
src/bumperbot_cpp_examples/: CMakeLists.txt  package.xml
src/bumperbot_cpp_examples/include/bumperbot_cpp_examples/: simple_turtlesim_kinematics.hpp
src/bumperbot_cpp_examples/src/: simple_parameter.cpp  simple_publisher.cpp  simple_subs.cpp  simple_turtlesim_kinematics.cpp
src/bumperbot_description/: CMakeLists.txt  package.xml
src/bumperbot_description/launch/: gazebo.launch.py
src/bumperbot_description/rviz/: display.rviz
src/bumperbot_description/urdf/: bumperbot_gazebo.xacro
src/bumperbot_py_examples/: setup.py
src/install/: local_setup.sh  setup.sh
src/install/bumperbot_controller/share/bumperbot_controller/: local_setup.sh  package.sh  package.xml
src/install/bumperbot_cpp_examples/lib/bumperbot_cpp_examples/: simple_publisher
src/install/bumperbot_cpp_examples/share/bumperbot_cpp_examples/: package.sh
src/install/bumperbot_description/share/bumperbot_description/: package.sh
src/install/bumperbot_py_examples/share/bumperbot_py_examples/: package.sh
src/log/: latest_build
(+4 files in other folders)
